src/objects/OCD_Interest_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <label>Acquisition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of the World</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Factor__c</fullName>
        <label>Monthly Factor</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term(Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>$1 Buy Out</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fair Market Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>OCD Interest Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acquisition_Type__c</columns>
        <columns>Locale__c</columns>
        <columns>Type__c</columns>
        <columns>Term_Months__c</columns>
        <columns>Max_Term__c</columns>
        <columns>Monthly_Factor__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FMV</fullName>
        <columns>NAME</columns>
        <columns>Acquisition_Type__c</columns>
        <columns>Locale__c</columns>
        <columns>Type__c</columns>
        <columns>Term_Months__c</columns>
        <columns>Max_Term__c</columns>
        <columns>Monthly_Factor__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Fair Market Value</value>
        </filters>
        <label>FMV</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Buy_Out</fullName>
        <columns>NAME</columns>
        <columns>Acquisition_Type__c</columns>
        <columns>Locale__c</columns>
        <columns>Type__c</columns>
        <columns>Term_Months__c</columns>
        <columns>Max_Term__c</columns>
        <columns>Monthly_Factor__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>$1 Buy Out</value>
        </filters>
        <label>$1 Buy Out</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Intererst Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCD Interest Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>